--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,13 +40,13 @@ jobs:
         run: |
           cat > ansible/inventory.ini <<'INV'
           [web]
-          web ansible_host=${{ secrets.EC2_WEB_IP }} ansible_user=ec2-user
+          web-server ansible_host=${{ secrets.EC2_WEB_IP }} ansible_user=ec2-user
 
           [api]
-          api ansible_host=${{ secrets.EC2_API_IP }} ansible_user=ec2-user
+          api-server ansible_host=${{ secrets.EC2_API_IP }} ansible_user=ec2-user
 
           [nagios]
-          nagios ansible_host=${{ secrets.EC2_NAGIOS_IP }} ansible_user=ec2-user
+          nagios-server ansible_host=${{ secrets.EC2_NAGIOS_IP }} ansible_user=ec2-user
 
           [all:vars]
           ansible_python_interpreter=/usr/bin/python3
