--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,11 +1,11 @@
 [web]
-web ansible_host=__EC2_WEB_IP__ ansible_user=ec2-user
+web-server ansible_host=__EC2_WEB_IP__ ansible_user=ec2-user
 
 [api]
-api ansible_host=__EC2_API_IP__ ansible_user=ec2-user
+api-server ansible_host=__EC2_API_IP__ ansible_user=ec2-user
 
 [nagios]
-nagios ansible_host=__EC2_NAGIOS_IP__ ansible_user=ec2-user
+nagios-server ansible_host=__EC2_NAGIOS_IP__ ansible_user=ec2-user
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
