--- a/api/package.json
+++ b/api/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "provertos-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
