--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,11 +1,11 @@
 [web]
-web-server ansible_host=__EC2_WEB_IP__ ansible_user=ec2-user
+web-server ansible_host=44.211.50.228 ansible_user=ec2-user
 
 [api]
-api-server ansible_host=__EC2_API_IP__ ansible_user=ec2-user
+api-server ansible_host=44.193.199.94 ansible_user=ec2-user
 
 [nagios]
-nagios-server ansible_host=__EC2_NAGIOS_IP__ ansible_user=ec2-user
+nagios-server ansible_host=3.236.127.159 ansible_user=ec2-user
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
