--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,8 +1,8 @@
----
 ansible_become: true
 node_version: "18.x"
 app_user: provertos
 deploy_dir: /opt/provertos
 react_build_dir: /opt/provertos/client/build
 api_port: 3001
-mongodb_uri: "${MONGODB_URI}"
+mongodb_uri: "your_mongo_uri"
+cors_origin: "http://44.211.50.228"
