--- a/infra/terraform.tfvars.example
+++ b/infra/terraform.tfvars.example
@@ -1,4 +1,4 @@
 # Copy to terraform.tfvars and edit
-aws_region = "us-east-1"
-instance_type = "t3.micro"
-# ssh_key_name = "my-aws-key"  # optional, leave blank to use EC2 without keypair
+aws_region = "ap-south-1"
+instance_type = "t2.micro"
+# ssh_key_name = "provertos-key"  # optional, leave blank to use EC2 without keypair
